# FAST-LIVO2-ROS2-Arduino-Nano-ESP32-WiFi-NTP-time-synchronization

./: .gitignore  README.md  WIRING.md  livo2_timesync.ino
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/: README.md
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/config/: camera_pinhole_mid360.yaml  mid360_hikrobot.yaml
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/launch/: mapping_mid360_hikrobot.launch.py
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/mvs_ros2_cam/: CMakeLists.txt  package.xml
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/mvs_ros2_cam/config/: cam_config.yaml
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/mvs_ros2_cam/launch/: mvs_camera.launch.py
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/mvs_ros2_cam/src/: grab_trigger_ros2.cpp
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/patches/: vikit_common_CMakeLists.txt  vikit_ros_CMakeLists.txt
fast_livo2_ros2_jetson_v2/fast_livo2_ros2_jetson/scripts/: start_fast_livo2.sh
