<?xml version="1.0"?>
<package format="3">
  <name>mvs_ros2_cam</name>
  <version>1.0.0</version>
  <description>HIKrobot MVS camera ROS2 driver (ported from LIV_handhold_2/mvs_ros_driver)</description>
  <maintainer email="cii@todo.todo">cii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
